--- a/assets/sass/components/primary-navigation.scss
+++ b/assets/sass/components/primary-navigation.scss
@@ -1,6 +1,7 @@
 
 .PrimaryNavigation-menu {
     display: none;
+    color: #333;
     background-color: transparent;
     border: 2px solid #333;
     border-radius: px2rem(24px);
